--- a/index.html
+++ b/index.html
@@ -8,42 +8,64 @@
 	</head>
 	<body>
 		<!-- Header -->
-		<h2>Header logo</h2>
-		<ul>
-			<li><a href="#">header link one</a></li>
-			<li><a href="#">header link two</a></li>
-			<li><a href="#">header link three</a></li>
-		</ul>
+		<header>
+			<h2>Header logo</h2>
+			<ul>
+				<li><a href="#">header link one</a></li>
+				<li><a href="#">header link two</a></li>
+				<li><a href="#">header link three</a></li>
+			</ul>
+		</header>
 		<!-- Main -->
-		<div class="section1">
-			<h1>This side is awesome</h1>
-			<p>
-				This site has some subtext that goes here under the main title. It's a
-				smaller font and the color is lower
-			</p>
-			<button>Sign up</button>
-			<div>this is a place holder for an image</div>
-		</div>
-		<!-- Some random information -->
-		<div class="section2">
-			<h2>Some random information</h2>
-			<div class="card">
-				<div class="placeholder2"></div>
-				<div>this is some subtext under an illustration or image</div>
-			</div>
-			<div class="card">
-				<div class="placeholder2"></div>
-				<div>this is some subtext under an illustration or image</div>
-			</div>
-			<div class="card">
-				<div class="placeholder2"></div>
-				<div>this is some subtext under an illustration or image</div>
-			</div>
-			<div class="card">
-				<div class="placeholder2"></div>
-				<div>this is some subtext under an illustration or image</div>
-			</div>
-		</div>
+		<main>
+      <div class="section1">
+        <h1>This side is awesome</h1>
+        <p>
+          This site has some subtext that goes here under the main title. It's a
+          smaller font and the color is lower
+        </p>
+        <button>Sign up</button>
+        <div>this is a place holder for an image</div>
+      </div>
+      <!-- Some random information -->
+      <div class="section2">
+        <h2>Some random information</h2>
+        <div class="card">
+          <div class="placeholder2"></div>
+          <div>this is some subtext under an illustration or image</div>
+        </div>
+        <div class="card">
+          <div class="placeholder2"></div>
+          <div>this is some subtext under an illustration or image</div>
+        </div>
+        <div class="card">
+          <div class="placeholder2"></div>
+          <div>this is some subtext under an illustration or image</div>
+        </div>
+        <div class="card">
+          <div class="placeholder2"></div>
+          <div>this is some subtext under an illustration or image</div>
+        </div>
+      </div>
+      <!-- Quote section -->
+      <div class="quote">
+        <p>
+          This is an inspiring quote or a testimonial from a customer. Maybe it's
+          just filling up space, or maybe people will actually read it. Who knows?
+          All I know is that it looks nice.
+        </p>
+        <p>-Thor, God of Thunder</p>
+      </div>
+      <!-- Bottom section -->
+      <div class="bottom-section">
+        <p>Call to action! It's time!</p>
+        <p>Sign up for our product by clicking that button right over there!</p>
+        <button>Sign up</button>
+      </div>
+    </main>
 		<!-- Footer -->
+    <footer>
+      <div>Copyright &#169 The Odin Project 2021</div>
+    </footer>
 	</body>
 </html>
