start apply font and background styles to header and hero

--- a/index.html
+++ b/index.html
@@ -20,12 +20,14 @@
 		<!-- Main -->
 		<main>
       <div class="section1">
-        <h1>This side is awesome</h1>
-        <p>
-          This site has some subtext that goes here under the main title. It's a
-          smaller font and the color is lower
-        </p>
-        <button>Sign up</button>
+        <div>
+          <h1>This website is awesome</h1>
+          <p>
+            This site has some subtext that goes here under the main title. It's a
+            smaller font and the color is lower
+          </p>
+          <button>Sign up</button>
+        </div>
         <div>this is a place holder for an image</div>
       </div>
       <!-- Some random information -->
