--- a/index.html
+++ b/index.html
@@ -8,29 +8,33 @@
 		<link rel="stylesheet" href="styles.css" />
 	</head>
 	<body>
-		<!-- Header -->
+		<!-- header -->
 		<header>
-			<h2>Header logo</h2>
+			<h2>Header Logo</h2>
 			<ul>
 				<li><a href="#">header link one</a></li>
 				<li><a href="#">header link two</a></li>
 				<li><a href="#">header link three</a></li>
 			</ul>
 		</header>
-		<!-- Main -->
+		<!-- main -->
 		<main>
 			<div class="section1">
-				<div>
-					<h1>This website is awesome</h1>
-					<p>
-						This site has some subtext that goes here under the main title. It's
-						a smaller font and the color is lower
-					</p>
-					<button>Sign up</button>
+				<div class="section1-sub">
+					<div class="section1-card">
+						<h1>This website is awesome</h1>
+						<p>
+							This site has some subtext that goes here under the main title.
+							It's a smaller font and the color is lower
+						</p>
+						<button>Sign up</button>
+					</div>
 				</div>
-				<div>this is a place holder for an image</div>
+				<div class="section1-sub">
+					<div class="section1-text">this is a place holder for an image</div>
+				</div>
 			</div>
-			<!-- Some random information -->
+			<!-- some random information -->
 			<div class="section2">
 				<h2>Some random information</h2>
 				<div class="card">
@@ -50,7 +54,7 @@
 					<div>this is some subtext under an illustration or image</div>
 				</div>
 			</div>
-			<!-- Quote section -->
+			<!-- quote section -->
 			<div class="quote">
 				<p>
 					This is an inspiring quote or a testimonial from a customer. Maybe
@@ -59,14 +63,14 @@
 				</p>
 				<p>-Thor, God of Thunder</p>
 			</div>
-			<!-- Bottom section -->
+			<!-- bottom section -->
 			<div class="bottom-section">
 				<p>Call to action! It's time!</p>
 				<p>Sign up for our product by clicking that button right over there!</p>
 				<button>Sign up</button>
 			</div>
 		</main>
-		<!-- Footer -->
+		<!-- footer -->
 		<footer>
 			<div>Copyright &#169; The Odin Project 2021</div>
 		</footer>
