hero section done

--- a/index.html
+++ b/index.html
@@ -17,23 +17,26 @@
 				<li><a href="#">header link three</a></li>
 			</ul>
 		</header>
+
 		<!-- main -->
 		<main>
+			<!-- Hero -->
 			<div class="section1">
-				<div class="section1-sub">
+				<div class="section1-sub1">
 					<div class="section1-card">
 						<h1>This website is awesome</h1>
 						<p>
 							This site has some subtext that goes here under the main title.
-							It's a smaller font and the color is lower
+							It's a smaller font and the color is lower contrast
 						</p>
 						<button>Sign up</button>
 					</div>
 				</div>
-				<div class="section1-sub">
+				<div class="section1-sub2">
 					<div class="section1-text">this is a place holder for an image</div>
 				</div>
 			</div>
+
 			<!-- some random information -->
 			<div class="section2">
 				<h2>Some random information</h2>
@@ -54,6 +57,7 @@
 					<div>this is some subtext under an illustration or image</div>
 				</div>
 			</div>
+
 			<!-- quote section -->
 			<div class="quote">
 				<p>
@@ -63,6 +67,7 @@
 				</p>
 				<p>-Thor, God of Thunder</p>
 			</div>
+
 			<!-- bottom section -->
 			<div class="bottom-section">
 				<p>Call to action! It's time!</p>
@@ -70,6 +75,7 @@
 				<button>Sign up</button>
 			</div>
 		</main>
+
 		<!-- footer -->
 		<footer>
 			<div>Copyright &#169; The Odin Project 2021</div>
