start section2 layout

--- a/index.html
+++ b/index.html
@@ -40,21 +40,23 @@
 			<!-- some random information -->
 			<div class="section2">
 				<h2>Some random information</h2>
-				<div class="card">
-					<div class="placeholder2"></div>
-					<div>this is some subtext under an illustration or image</div>
-				</div>
-				<div class="card">
-					<div class="placeholder2"></div>
-					<div>this is some subtext under an illustration or image</div>
-				</div>
-				<div class="card">
-					<div class="placeholder2"></div>
-					<div>this is some subtext under an illustration or image</div>
-				</div>
-				<div class="card">
-					<div class="placeholder2"></div>
-					<div>this is some subtext under an illustration or image</div>
+				<div class="section2-container">
+					<div class="card">
+						<div class="placeholder2"></div>
+						<div>this is some subtext under an illustration or image</div>
+					</div>
+					<div class="card">
+						<div class="placeholder2"></div>
+						<div>this is some subtext under an illustration or image</div>
+					</div>
+					<div class="card">
+						<div class="placeholder2"></div>
+						<div>this is some subtext under an illustration or image</div>
+					</div>
+					<div class="card">
+						<div class="placeholder2"></div>
+						<div>this is some subtext under an illustration or image</div>
+					</div>
 				</div>
 			</div>
 
