--- a/index.html
+++ b/index.html
@@ -72,8 +72,12 @@
 
 			<!-- bottom section -->
 			<div class="bottom-section">
-				<p>Call to action! It's time!</p>
-				<p>Sign up for our product by clicking that button right over there!</p>
+				<div class="bottom-section-container">
+					<p>Call to action! It's time!</p>
+					<p>
+						Sign up for our product by clicking that button right over there!
+					</p>
+				</div>
 				<button>Sign up</button>
 			</div>
 		</main>
